Retarget java 8