@@ -2,11 +2,10 @@ package dev.zontreck.ariaslib.file;
 
 import java.io.*;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
-public class AriaIO
-{
-    public static void write(Path fileName, Entry folder)
-    {
+public class AriaIO {
+    public static void write(Path fileName, Entry folder) {
         try {
             DataOutputStream dos = new DataOutputStream(new FileOutputStream(fileName.toFile()));
             folder.write(dos);
@@ -18,8 +17,7 @@ public class AriaIO
         }
     }
 
-    public static Entry read(Path fileName)
-    {
+    public static Entry read(Path fileName) {
         try {
             DataInputStream dis = new DataInputStream(new FileInputStream(fileName.toFile()));
             return Entry.read(dis);
@@ -31,6 +29,6 @@ public class AriaIO
     }
 
     public static Path resolveDataFile(String main) {
-        return Path.of(main+".aria");
+        return Paths.get(main + ".aria");
     }
 }
